# ethereum-etl

./: .env  .env.template  .gitignore  DEV.md  README.md  abi.json  create_clickhouse.py  create_sqlite_table.py  draft.json  draft.py  main.py  misc.py  pyproject.toml  raw_block.json  raw_receipt.json  result.json  smt.py  test.py  test_fetcher.py  tmp.json  tmp_1.json  tmp_mint_v2.json  trash.py  watch.py
json/: draft.json  etherscan.json  temp.json
scripts/: create_clickhouse_table.py  create_sqlite_table.py  create_table_duckdb.py  create_table_sqlite.py  init.py
scripts/clickhouse/: create_table.py  delete_table.py
scripts/memgraph/: create_setting.py  delete_setting.py
scripts/nats/: create_stream.py  create_subject.py  delete_stream.py  delete_subject.py  tmp.py
scripts/sqlite/: create_table.py  delete_table.py
src/: logger.py  pipeline.py
src/abis/: event.py  function.py  utils.py
src/clients/: base.py  binance_client.py  etherscan_client.py  four_byte.py  get_client.py  json_client.py  rpc_client.py  rpc_client_v2.py
src/clis/: __init__.py  export_block_transaction_withdrawal.py  historical.py  realtime_ws.py  utils.py
src/configs/: clickhouse.py  connection_manager.py  duckdb.py  environment.py  kafka_conn.py  nats_conn.py  sqlite.py
src/exporters/: kafka_exporter.py  manager.py  mapper.py  nats_exporter.py  utils.py
src/extractors/: abi.py  account.py  base_async.py  block.py  composite.py  contract.py  enrich.py  enrich_polars.py  log.py  (+14 more)
system/: compose.yaml  docker-compose.yaml  draft.yaml  nats.conf
tests/: block_transaction_wtihdrawal.py  compare_old_even.py  receipt_log_.py  special_log.py  test_fetcher.py  test_pool_fetcher.py  test_raw_block_fetcher.py  test_service.py  test_token_fetcher.py  token_transfer.py
(+197 files in other folders)
