[project]
name = "ethereum-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-sqlalchemy>=0.3.2",
    "duckdb-engine>=0.17.0",
    "eth-abi>=5.2.0",
    "eth-hash[pycryptodome]>=0.7.1",
    "eth-utils>=5.3.1",
    "httpx-ws>=0.7.2",
    "httpx[http2]>=0.28.1",
    "kafka-python>=2.2.15",
    "loguru>=0.7.3",
    "nats-py>=2.11.0",
    "neo4j>=6.0.2",
    "orjson>=3.11.2",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pydantic-settings>=2.10.1",
    "rich-progress>=0.4.0",
    "sqlalchemy>=2.0.43",
    "tabulate>=0.9.0",
    "uvloop>=0.21.0",
]
